fix(button): remove shrink on mobile

--- a/src/css/Banner.css
+++ b/src/css/Banner.css
@@ -67,8 +67,4 @@ video.video-banner {
     display: block;
     text-decoration: none;
   }
-
-  .btn {
-    width: 60%;
-  }
 }
